bppackaging/src/objects/Timezone__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Timezones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Shift__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Shift From UTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timezone_Label__c</fullName>
        <label>Timezone Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tz_Name__c</fullName>
        <label>Tz Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Timezone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TZ-{000}</displayFormat>
        <label>Timezone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timezones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>